# OpenGD32VW553

./: .gitignore  CMakeLists.txt  README.md  cmake_build.bat  cmake_build.sh  release_notes.txt
MBL/mainboot/: CMakeLists.txt  mbl.c
MBL/project/: mbl_afterbuild.bat  mbl_afterbuild.sh
MBL/project/eclipse/: openocd_gdlink.cfg  openocd_jlink.cfg
MSDK/: CMakeLists.txt
MSDK/FatFS/port/: fatfs.c
MSDK/app/: CMakeLists.txt  _build_date.h  app_cfg.h  atcmd.c  atcmd_mqtt.c  atcmd_tcpip.c  cmd_shell.c  ping.c
MSDK/app/atcmd_ota_demo/: atcmd_ota_demo.c
MSDK/app/mqtt_app/: mqtt_client_config.c  mqtt_client_config.h  mqtt_cmd.c  mqtt_cmd.h  mqtt_ssl_certs.c
MSDK/ble/: CMakeLists.txt
MSDK/blesw/: CMakeLists.txt
MSDK/examples/ble/peripheral/ble_ibeacon/: .project
MSDK/examples/cloud/alicloud/alicloud_example/Eclipse_project/: .cproject
MSDK/examples/cloud/alicloud/alicloud_example/src/: app_cfg.h
MSDK/examples/cloud/aws/mqtt_mutual_auth/Eclipse_project/: .cproject
MSDK/examples/cloud/azure/azure_example/Eclipse_project/: .cproject
MSDK/examples/cloud/azure/azure_example/src/: app_cfg.h
MSDK/examples/combo/blufi/src/: blufi_protocol.c
MSDK/examples/wifi/atcmd_spi_example/Eclipse_project/: .cproject
MSDK/examples/wifi/atcmd_spi_example/src/: app_cfg.h  main.c  spi_master.h
MSDK/examples/wifi/https_client/Eclipse_project/: .cproject
MSDK/examples/wifi/mqtt_client/src/: mqtt_client_main.c
MSDK/examples/wifi/websocket_client/Eclipse_project/: .project
MSDK/examples/wifi/wifi_mesh_smart/: README.md
MSDK/examples/wifi/wifi_mesh_smart/Eclipse_project/: .cproject  .project
MSDK/examples/wifi/wifi_mesh_smart/src/: app_cfg.h  wifi_mesh_smart_main.c
MSDK/lwip/: CMakeLists.txt
MSDK/lwip/lwip-2.2.0/: CMakeLists.txt
MSDK/lwip/lwip-2.2.0/port/: lwipopts.h
MSDK/lwip/lwip-2.2.0/src/api/: sockets.c
MSDK/lwip/lwip-2.2.0/src/core/ipv4/: ip4_napt.c
MSDK/lwip/lwip-2.2.0/src/include/lwip/: ip4_napt.h  lwip_napt.h
MSDK/lwip/sntp/: CMakeLists.txt
MSDK/lwip/tinyws/: CMakeLists.txt
MSDK/macsw/: CMakeLists.txt
MSDK/macsw/export/: _build_version.h
MSDK/mbedtls/: CMakeLists.txt
MSDK/plf/GD32VW55x_standard_peripheral/: CMakeLists.txt
MSDK/plf/riscv/: CMakeLists.txt
MSDK/plf/riscv/arch/lib/: lib_hook.c
MSDK/plf/riscv/gd32vw55x/: gd32vw55x_it.c  system_gd32vw55x.c
MSDK/plf/src/: CMakeLists.txt  gd32vw55x_platform.c
MSDK/plf/src/lcd/: lcd_ILI9341_driver.c  lcd_ILI9341_driver.h
MSDK/plf/src/nvds/: nvds_type.h
MSDK/plf/src/qspi_flash/: nand_flash_api.c  nand_flash_api.h  nand_flash_cfg.h  nand_flash_def.h  qspi_flash_api.c  qspi_nand_flash_api.c  qspi_nand_flash_api.h
MSDK/plf/src/spi/: spi.c  spi.h
MSDK/plf/src/uart/: log_uart.c  uart.c  uart.h
MSDK/projects/: image_afterbuild.bat  image_afterbuild.sh  image_prebuild.bat
MSDK/projects/eclipse/msdk/: .cproject  .project
MSDK/projects/eclipse/wpa_supplicant/: .cproject
MSDK/rtos/: CMakeLists.txt
MSDK/rtos/FreeRTOS/: CMakeLists.txt
MSDK/rtos/FreeRTOS/Source/portable/riscv32/: port.c
MSDK/rtos/FreeRTOS/config/: FreeRTOSConfig.h
MSDK/rtos/rtos_wrapper/: wrapper_freertos.c
MSDK/util/: CMakeLists.txt
MSDK/wifi_manager/: CMakeLists.txt  wifi_management.c  wifi_netlink.c
MSDK/wifi_manager/wifi_mesh_smart/: wifi_mesh_smart.h  wifi_mesh_smart_config.c  wifi_mesh_smart_timer_task.h
config/: config_gdm32.h  platform_def.h
scripts/: setup_debugger_env.sh
scripts/certs/: gen-ecdsa-mbl.bat  gen-ecdsa-rot.bat  gen-ed25519-rot.bat
scripts/certs/ECDSA256/: mbl-cert.pem  mbl-key.pem  rot-cert.txt  rot-key.pem
scripts/certs/ED25519/: mbl-cert.txt  mbl-key.txt
scripts/certs/ecdsa256/: mbl-cert.txt  mbl-key.txt  rot-cert.pem  rot-cert.srl  rot-key.txt
scripts/cmake/: toolchain.cmake  utils.cmake
scripts/docker/: Dockerfile  README.md
